RESOLVED FIXED148146
Search input results and clear icons are misaligned when padding is added
https://bugs.webkit.org/show_bug.cgi?id=148146
Summary Search input results and clear icons are misaligned when padding is added
Wenson Hsieh
Reported 2015-08-18 15:38:12 PDT
Open an HTML file with <input style="-webkit-appearance: textfield; padding: 10px;" value=test type=search results=5>. Observe that the magnifying glass (for results) and the cancel button are both clipped by the padding.
Attachments
Patch (5.31 KB, patch)
2015-08-18 16:27 PDT, Wenson Hsieh
no flags
Patch (5.38 KB, patch)
2015-08-18 16:31 PDT, Wenson Hsieh
zalan: review+
buildbot: commit-queue-
Archive of layout-test-results from ews101 for mac-mavericks (612.00 KB, application/zip)
2015-08-18 16:48 PDT, Build Bot
no flags
Archive of layout-test-results from ews107 for mac-mavericks-wk2 (657.69 KB, application/zip)
2015-08-18 17:00 PDT, Build Bot
no flags
Wenson Hsieh
Comment 1 2015-08-18 15:38:52 PDT
Wenson Hsieh
Comment 2 2015-08-18 16:27:09 PDT
Wenson Hsieh
Comment 3 2015-08-18 16:31:24 PDT
Build Bot
Comment 4 2015-08-18 16:48:55 PDT
Comment on attachment 259314 [details] Patch Attachment 259314 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/73346 New failing tests: platform/mac/fast/forms/search/search-padding-cancel-results-buttons.html
Build Bot
Comment 5 2015-08-18 16:48:58 PDT
Created attachment 259321 [details] Archive of layout-test-results from ews101 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-mavericks Platform: Mac OS X 10.9.5
Build Bot
Comment 6 2015-08-18 17:00:51 PDT
Comment on attachment 259314 [details] Patch Attachment 259314 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/73402 New failing tests: platform/mac/fast/forms/search/search-padding-cancel-results-buttons.html
Build Bot
Comment 7 2015-08-18 17:00:54 PDT
Created attachment 259323 [details] Archive of layout-test-results from ews107 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Wenson Hsieh
Comment 8 2015-08-18 17:23:55 PDT
Note You need to log in before you can comment on or make changes to this bug.